public/the-game.css
@media screen and (max-width: 600px) {
    #nav-mobile i.material-icons {
        display: none;
    }
    
    nav .nav-wrapper i {
      height: 64px;
      line-height: 64px;
    }
}

body {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
}

main {
  flex: 1 0 auto;
  padding: 3em 0;
}

a {
  cursor: pointer;
}

[data-loged="true"] {
  display: none;
}

body > main:not(#loading) {
  display: none;
}

[data-require-autoplay] {
  display: none;
}

[data-templates] {
  display: none;
}

i.material-icons {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

